# my_rhwp

./: .gitmodules  LICENSE  README.md  package-lock.json  plan.md
.github/workflows/: build.yml  check-upstream.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/deb/: rhwp-desktop-mime.xml
src-tauri/src/: lib.rs  main.rs  tauri-bridge.js
