[package]
name = "rhwp-desktop"
version = "0.1.0"
description = "RHWP Desktop - HWP viewer/editor powered by rhwp"
authors = ["JinGul"]
edition = "2021"

[lib]
name = "rhwp_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
